# lessons-20-2

./: dogs.json  dogs1.json  pyproject.toml
config/: settings.py  urls.py
dogs/: admin.py  models.py  urls.py  views.py
dogs/migrations/: 0001_initial.py
dogs/templates/: base.html  dogs_detail.html  dogs_list.html
dogs/templates/includes/: inc_menu.html
dogs/templatetags/: my_tags.py
newapp/: urls.py
